# VoxelEngine

./: .gitignore  CMakeLists.txt  GLFW Test.vcxproj  GLFW Test.vcxproj.filters  chunk.cpp  main.cpp  noise.cpp
Debug/: chunk.obj.enc  vc141.idb
Debug/GLFW Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GLFW Test.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
assets/shaders/: shader.fs  shader.vs
graphics/: block.cpp  camera.cpp  chunkmanager.cpp  frustum.cpp  mesh.cpp  textures.cpp
graphics/font/: FTFont.h  FontGeometry.h  VertexTypes.h
include/: block.h  camera.h  chunk.h  chunkmanager.h  frustum.h  mesh.h  model.h  noise.h  plane.h  random.h  shader.h  textures.h
src/: main.cpp
src/graphics/: camera.cpp  graphics_utils.cpp  mesh.cpp  model.cpp  plane.cpp  shader.cpp  textures.cpp
src/utils/: noise.cpp  random.cpp
src/world/: chunk.cpp  chunkmanager.cpp
